--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,20 @@ a:hover {
   text-decoration: none;
   color: #EF233C
 }
+
+.grow {
+  transition: all .2s ease-in-out;
+}
+.grow-icon {
+  transition: all .1s ease-in-out;
+}
+.grow:hover {
+  transform: scale(1.05);
+}
+.grow-icon:hover {
+  transform: scale(1.2);
+}
+
 #galvanize:hover {
   text-decoration: none;
   color: #EF233C
